tools/tests/ui/fail/l1080.cnf
// Test file for error code: L1080
// Expected error: Underflow Illegal character in division structure -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
